tests/error/test-badclass1.py
if True:
  class Bar:
    x = 3
